--- a/Public/static/stylesheet.css
+++ b/Public/static/stylesheet.css
@@ -1,13 +1,18 @@
+html, body {
+    min-height: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    overflow-y: visible;
+    flex-direction: column;
+}
+
 body {
     background-color:#D9D9D9;
     font-family: verdana;
     color: #545454;
     font-size: 100%;
-    display: flex;
-	flex-direction: column;
-	height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 .contentBox {
@@ -16,19 +21,15 @@ body {
     width: 100%;
     flex-direction: column;
     margin: 5%;
-    padding: 0 20px 20px 20px;
-    height: 100%;
-    flex: 1;
+    padding: 0 2% 2% 2%;
     box-sizing: border-box;
 }
 
 .pageDisplay {
-    width:100%;
-    height: 100%;
-    margin: 0;
     display: flex;
     flex-direction: row;
-    overflow-y: auto;
+    width: 100%;
+    min-height: calc(100vh - 90px);
 }
 
 h1, h2 {
@@ -39,8 +40,7 @@ h1, h2 {
 
 aside {
     background-color: #8CC6EA;
-    width: 15%;
-    height: calc(100vh - 90px);
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,7 +49,7 @@ aside {
 .asideButton {
     background-color: #8CC6EA; 
     border: none;
-    color: #ffffff;
+    color: #545454;
     height: 70px;
     width: 100%;
     text-align: center;
@@ -60,6 +60,7 @@ aside {
     font-size: 18px;
     padding: 0 10px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 /* navbar */ 
@@ -69,6 +70,7 @@ aside {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    flex-shrink: 0;
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
@@ -87,10 +89,11 @@ aside {
     display: flex;
     border: none;
     color: white;
-    padding: 10px 25px;
+    padding: 15px 20px;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
+    cursor: pointer;
 }
 
 .profileContainer {
@@ -120,13 +123,14 @@ aside {
     padding: 10px 10px;
     border-radius: 5px;
     position: absolute;
-    background-color: #D9D9D9;
+    background-color: #8CC6EA;
     width: 200px;
     top: 100%;
     right: 0;
     border: none;
     box-shadow: 0px 8px 16px 8px rgba(0,0,0,0.2);
     z-index: 1;
+    gap: 10px;
 }
 
 .dropdownContainer.active .dropdownContent {
@@ -135,18 +139,22 @@ aside {
 
 .dropdownItem {
     display: block;
+    width: auto;
     padding: 10px 15px;
     text-align: center;
-    background-color: #f5f5f5;
+    background-color: #fff;
     color: #545454;
+    font: inherit;
     text-decoration: none;
     border-radius: 4px;
     cursor: pointer;
+    border: none;
 }
 
 .logoContainer {
     height: 80%;
     margin-right: auto;
+    cursor: pointer;
 }
 
 .logo {
@@ -161,21 +169,39 @@ aside {
     color:#545454;
 }
 
-/* signUp classes */
+/* home.html classes */
+.meetingsBox {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
 
+.meetingCard {
+    background-color: #D9D9D9;
+    padding: 16px;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
 
+.meetingInstance {
+    color: #545454;
+    display: block;
+}
 
-/* login classes */
+/* signUp + login classes */
+
 .submitButton {
     width: 15%;
-    height: 10%;
+    height: 50px;
     background-color:#61A9D5;
     text-decoration: none;
     border: none;
     padding: 5px;
+    box-sizing: border-box;
     color: #ffffff;
     font-size: 20px;
     font-family:inherit;
+    cursor: pointer;
 }
 
 .login {
@@ -186,4 +212,3 @@ aside {
 label {
     font-size: larger;
 }
-/* edit/view booking */
