--- a/Public/templates/book.html
+++ b/Public/templates/book.html
@@ -15,7 +15,10 @@
                     </div>
                     <div class="dropdownContent">
                         <a href="{% url 'settings' %}" class="dropdownItem">Settings</a>
-                        <a href="{% url 'index' %}" class="dropdownItem">Log Out</a>
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="dropdownItem" style="width: 100%">Log Out</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -39,7 +42,7 @@
                 <form action="{% url 'book' %}" method="POST">
                     {% csrf_token %}
                     <h2>1. Choose a day & time</h2>
-                    <p>Format: day/month/year hour/minute AM/PM</p>
+                    <p>Type your desired time in the format [day/month/year hour/minute AM/PM].</p>
                     <p>Alternatively, click on the calendar icon to choose a day and time.</p>
                         <input type="datetime-local" id="bookingDate" name="bookingDate">
                     <h2>2. Choose a room</h2>
