--- a/Public/templates/signUp.html
+++ b/Public/templates/signUp.html
@@ -34,6 +34,7 @@
                 <div>   
                     <h1>Create an Account</h1>
                 </div>
+                <p>Already have an account? Log in <a href="{% url 'login' %}"">here</a>!</p>
                 <form class="signUpForm" action="{% url 'signUp' %}" method="post">
                     {% csrf_token %}
                     <h2>{{ form.username.label_tag }}</h2>
